# ContextGraph

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.agents/plugins/: marketplace.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
contextgraph/: __init__.py  a2a_server.py  anthropic_memory.py  background.py  bootstrap.py  cli.py  config.py  delivery.py  demo.py  errors.py  eval_cli.py  eval_dataset.py  eval_dataset_cli.py  evaluation.py  events.py  extraction.py  extraction_llm.py  federation.py  identity.py  in_memory.py  main.py  mcp_remote.py  mcp_server.py  models.py  payment.py  permissions.py  reactive_delta.py  repository.py  scoring.py  sentinel.py  server.py  service.py  utils.py  web.py
docs/: README_ES.md  anthropic-memory-tool.md  benchmarks.md  claude-code-integration.md  contextclaw-tiktok.md  contextgraph-demo.tape  contextgraph-protocol-masterplan.md  contextgraph-team-summary.md  contextgraph-vs-vector-memory.md  demo-video.md  design-partner-program.md  faq.md  github-launch-checklist.md  index.html  landing.css  launch-assets.md  launch-plan.md  mcp-chat-agent.md  mcp-registry-launch.md  memory-discipline-roadmap.md  memory-gating.md  payments.md  pilot-checklist.md  production-readiness.md  reactive-delta-compaction.md  roadmap.md  security-operations.md  star-chat-agent.md  use-cases.md
examples/: anthropic_memory_tool.py  basic_shared_memory.py  beta_quickstart.py  chat_agent_sdk.py  context_pack_demo.py  contextclaw_promo.py  dashboard_demo_seed.py  http_roundtrip.py  launch_demo.py  reactive_delta_compaction_demo.py  research_memory_workflow.py  star_chat_agent.py  support_memory_workflow.py  topic_and_follow_demo.py
registry/: contextgraph.server.template.json
scripts/: benchmark_local.py  check_public_launch.py  render_contextclaw_promo.py  render_dashboard_demo.py  render_launch_demo.py
sdk/: README.md  pyproject.toml
sdk/contextgraph_sdk/: __init__.py  _local.py  _utils.py  client.py  exceptions.py  memory_directory.py  policies.py
tasks/: todo.md
tests/: test_agent_defaults.py  test_agent_lifecycle.py  test_anthropic_memory.py  test_bootstrap.py  test_claim_lifecycle.py  test_claim_update.py  test_context_pack.py  test_dashboard_demo.py  test_discovery.py  test_discovery_api.py  test_eval_cli.py  test_eval_dataset.py  test_eval_dataset_cli.py  test_evaluation.py  test_extraction.py  test_extraction_llm.py  test_federation.py  test_feed.py  test_follow.py  test_mcp_remote.py  test_mcp_server.py  test_memory_consolidation.py  test_memory_directory.py  test_memory_policy.py  test_models.py  test_neo4j_integration.py  test_neo4j_repository_roundtrip.py  test_permissions.py  test_playground.py  test_policies.py  test_reactive_delta_compaction.py  test_recall_explain.py  test_recall_memory.py  test_recall_repository_search.py  test_reputation.py  test_scoring.py  test_sdk.py  test_sdk_http.py  test_sentinel.py  test_sentinel_integration.py  (+15 more)
(+77 files in other folders)
