[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "contextgraph-sdk"
version = "0.3.0"
description = "Thin HTTP client for the ContextGraph API — zero server dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Maximiliano Allende" }
]
keywords = ["agents", "knowledge-graph", "memory", "ai", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
local = ["contextgraph"]
policies = ["contextgraph"]

[project.urls]
Homepage = "https://github.com/AllenMaxi/ContextGraph"
Repository = "https://github.com/AllenMaxi/ContextGraph"

[tool.hatch.build.targets.wheel]
packages = ["contextgraph_sdk"]
